[gd_scene load_steps=2 format=3 uid="uid://mmirfa2yhj50"]

[ext_resource type="Script" path="res://ui/xml_tree_viewer/xml_tree_viewer.gd" id="1_iqqhu"]

[node name="XMLTreeViewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iqqhu")

[node name="Tree" type="Tree" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
column_titles_visible = true
allow_rmb_select = true

[connection signal="column_title_clicked" from="Tree" to="." method="_on_tree_column_title_clicked"]
[connection signal="item_selected" from="Tree" to="." method="_on_tree_item_selected"]
